--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li class="main-section-list">
               <div class="features-card">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-tarelka"></use>
+                  <use href="./images/icons.svg#icon-tarelka"></use>
                 </svg>
               </div>
               <h3 class="header-features">Strategy</h3>
@@ -76,7 +76,7 @@
             <li class="main-section-list">
               <div class="features-card">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="header-features">Punctuality</h3>
@@ -88,7 +88,7 @@
             <li class="main-section-list">
               <div class="features-card">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-computer"></use>
+                  <use href="./images/icons.svg#icon-computer"></use>
                 </svg>
               </div>
               <h3 class="header-features">Diligence</h3>
@@ -100,7 +100,7 @@
             <li class="main-section-list">
               <div class="features-card">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-kosmonavt"></use>
+                  <use href="./images/icons.svg#icon-kosmonavt"></use>
                 </svg>
               </div>
               <h3 class="header-features">Technologies</h3>
@@ -136,9 +136,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -150,7 +148,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -162,9 +160,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -176,9 +172,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -205,9 +199,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -219,7 +211,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -231,9 +223,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -245,9 +235,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -274,9 +262,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -288,7 +274,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -300,9 +286,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -314,9 +298,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -343,9 +325,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -357,7 +337,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -369,9 +349,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -383,9 +361,7 @@
                         height="16"
                         fill="none"
                       >
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -540,28 +516,28 @@
             <li class="footer-social-list">
               <a href="/" class="footer-social-links">
                 <svg class="footer-icon-svg" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list">
               <a href="/" class="footer-social-links">
                 <svg class="footer-icon-svg" width="24" height="24" fill="none">
-                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list">
               <a href="/" class="footer-social-links">
                 <svg class="footer-icon-svg" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list">
               <a href="/" class="footer-social-links">
                 <svg class="footer-icon-svg" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
