--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <ul class="features-list">
             <li class="main-section-list">
               <div class="features-card">
-                <svg class="icon" width="64" height="64">
+                <svg class="icon" width="64" height="64" fill="none">
                   <use href="./images/icons.svg#icon-tarelka"></use>
                 </svg>
               </div>
@@ -73,7 +73,7 @@
             </li>
             <li class="main-section-list">
               <div class="features-card">
-                <svg class="icon" width="64" height="64">
+                <svg class="icon" width="64" height="64" fill="none">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -85,7 +85,7 @@
             </li>
             <li class="main-section-list">
               <div class="features-card">
-                <svg class="icon" width="64" height="64">
+                <svg class="icon" width="64" height="64" fill="none">
                   <use href="./images/icons.svg#icon-computer"></use>
                 </svg>
               </div>
@@ -97,7 +97,7 @@
             </li>
             <li class="main-section-list">
               <div class="features-card">
-                <svg class="icon" width="64" height="64">
+                <svg class="icon" width="64" height="64" fill="none">
                   <use href="./images/icons.svg#icon-kosmonavt"></use>
                 </svg>
               </div>
@@ -128,28 +128,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -171,28 +171,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -214,28 +214,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -257,28 +257,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="icon-fill" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16" fill="none">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -433,35 +433,136 @@
           <ul class="footer-social-media-item">
             <li class="footer-social-list">
               <a href="/" class="footer-social-links">
-                <svg class="footer-icon-svg" width="24" height="24">
+                <svg class="footer-icon-svg" width="24" height="24" fill="none">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list">
               <a href="/" class="footer-social-links">
-                <svg class="footer-icon-svg" width="24" height="24">
+                <svg class="footer-icon-svg" width="24" height="24" fill="none">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list">
               <a href="/" class="footer-social-links">
-                <svg class="footer-icon-svg" width="24" height="24">
+                <svg class="footer-icon-svg" width="24" height="24" fill="none">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list">
               <a href="/" class="footer-social-links">
-                <svg class="footer-icon-svg" width="24" height="24">
+                <svg class="footer-icon-svg" width="24" height="24" fill="none">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
+        <div class="subscribe-item">
+          <p class="text-subscribe">Subscribe</p>
+          <form class="form" name="email">
+            <label class="form-label">
+              <input
+                class="email-input"
+                type="email"
+                name="e-mail"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="form-button" type="submit">
+              Subscribe
+              <svg class="footer-icon-svg" width="24" height="24" fill="none">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="modal-overlay">
+      <div class="modal-window">
+        <button class="button-close" type="button">
+          <svg class="svg-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form" autocomplete="off">
+          <div class="modal-div">
+            <label for="user_name" class="modal-label">Name</label>
+            <div class="second-modal-div">
+              <input
+                type="text"
+                class="form-input"
+                name="user-name"
+                id="user_name"
+              />
+              <svg class="svg-card" width="18" height="24">
+                <use href="./images/icons.svg#icon-name"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-div">
+            <label for="phone_number" class="modal-label">Phone</label>
+            <div class="second-modal-div">
+              <input
+                type="tel"
+                class="form-input"
+                id="phone_number"
+                name="user-phone"
+              />
+              <svg class="svg-card" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-div">
+            <label for="user_email" class="modal-label">Email</label>
+            <div class="second-modal-div">
+              <input
+                type="email"
+                name="user-email"
+                class="form-input"
+                id="user_email"
+              />
+              <svg class="svg-card" width="18" height="24">
+                <use href="./images/icons.svg#icon-mail"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="comment-div">
+            <label for="user_comment" class="modal-label">Comment</label>
+            <textarea
+              name="user-comment"
+              class="form-textarea"
+              id="user_comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="checkbox-conteiner">
+            <input
+              type="checkbox"
+              value="true"
+              class="input-checked visually-hidden"
+              name="user-privacy"
+              id="user_privacy"
+            />
+            <label for="user_privacy" class="checkbox-label">
+              <span class="checkbox-span">
+                <svg class="modal-accept" width="10" height="8">
+                  <use href="./images/icons.svg#icon-accept"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="link-privacy" href="/">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="button-send">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
